--- a/app/ui/Cards/Card.module.css
+++ b/app/ui/Cards/Card.module.css
@@ -7,10 +7,12 @@
     align-items: center;
     border: 4px solid #243327;
     border-radius: 16px;
+    margin: 16px;
 }
 .cardName {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: #243327;
     font-weight: 500;
+    font-size: 16px;
     padding-bottom: 8px;
 }
